src/test/WrongTypes/WrongTypes.expected
error: WrongTypes.panda:1:22: '+' cannot operate on 'panda.core.Int8', 'panda.core.Bit'
error: WrongTypes.panda:2:22: '^' cannot operate on 'panda.core.Int8', 'panda.core.Bit'
error: WrongTypes.panda:3:24: '&&' cannot operate on 'panda.core.Bit', 'panda.core.Bit'
error: WrongTypes.panda:4:22: expected 'panda.core.Bit', but found 'panda.core.Int8'
error: WrongTypes.panda:5:19: expected a number, but found 'panda.core.String'
error: WrongTypes.panda:6:20: expected 'panda.core.Bit', but found 'panda.core.Int8'
error: WrongTypes.panda:7:19: expected an integer, but found 'panda.core.Bit'
error: WrongTypes.panda:8:19: expected a number, but found 'null'
error: WrongTypes.panda:9:20: expected 'panda.core.Bit', but found 'null'
error: WrongTypes.panda:10:19: expected an integer, but found 'null'
error: WrongTypes.panda:11:19: cannot cast 'null' to 'panda.core.Object'
error: WrongTypes.panda:12:23: 'null' (null) cannot possibly be an instance of 'panda.core.Object'
error: WrongTypes.panda:13:4: expected 'panda.core.Bit', but found 'panda.core.String'
error: WrongTypes.panda:15:1: for ... in may only be used on arrays (found 'panda.core.Bit')
error: WrongTypes.panda:23:1: no match found for method test(<lambda>)
    possible error in lambda at WrongTypes.panda:23:6:
        when interpreted as (panda.core.Int32,panda.core.Int32)=>(...):
            lambda evaluated to 'panda.core.String', which cannot be used where 'panda.core.Int32' is expected
error: WrongTypes.panda:24:1: no match found for method test(<lambda>)
error: WrongTypes.panda:25:1: no match found for method test((panda.core.Int32, panda.core.Int32)=&>*(panda.core.Int32))
17 errors
