src/test/WrongTypes/WrongTypes.panda
Console.writeLine(42 + true)
Console.writeLine(42 ^ true)
Console.writeLine(true && true)
Console.writeLine(17 & 98)
Console.writeLine(-"Hello")
Console.writeLine(!56)
Console.writeLine(!!true)
Console.writeLine(-null)
Console.writeLine(!null)
Console.writeLine(!!null)
Console.writeLine(null->(Object))
Console.writeLine(null-?>(Object))
if "Hello"
    Console.writeLine("uh oh")
for i in false
for i:Int8? in 0 .. 10
    Console.writeLine("less silly but still won't work")

function test(fn:(Int, Int)=>(Int)):Int {
    return 12
}

test((x, y) => x + "Hello")
test((x:Int, y:Real) => x + y)
test(method(x:Int, y:Int):Int {
    return x + y
})